<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/decreaseTeam1"
                android:layout_width="70dp"
                android:onClick="decreaseScore"
                android:layout_height="70dp"
                android:background="@drawable/shape"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_baseline_minimize_24"
                android:contentDescription="Minus Button">
            </androidx.appcompat.widget.AppCompatImageButton>
            <TextView
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:text="team 1"
                android:textSize="30sp">
            </TextView>
            <TextView
                android:id="@+id/score_1"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:text="0"
                android:gravity="center"
                android:textSize="34dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true">

            </TextView>

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/increaseTeam1"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:onClick="increaseScore"
                android:background="@drawable/shape"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:contentDescription="Plus Button"
                android:src="@drawable/ic_baseline_add_24">
            </androidx.appcompat.widget.AppCompatImageButton>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/decreaseTeam2"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:onClick="decreaseScore"
                android:background="@drawable/shape"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_baseline_minimize_24">>
            </androidx.appcompat.widget.AppCompatImageButton>
            <TextView
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:text="team 2"
                android:textSize="30dp">
            </TextView>
            <TextView
                android:id="@+id/score_2"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:text="0"
                android:gravity="center"
                android:textSize="34dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true">
            </TextView>
            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/increaseTeam2"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:onClick="increaseScore"
                android:background="@drawable/shape"
                android:src="@drawable/ic_baseline_add_24">
            </androidx.appcompat.widget.AppCompatImageButton>
        </RelativeLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>